--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<img src="img/hacktoberfest.png" alt="Hacktoberfest">
 			</picture>
 			<div>
-				<h1>Information</h1>
+				<h1><b>Information</b></h1>
 				<p>All details about <a href="https://hacktoberfest.digitalocean.com" target="_blank">#hacktoberfest</a>.</p>
 				<p>To join this project, visit my <a href="https://github.com/NiklasSchmitt/hacktoberfest" target="_blank">GitHub repository</a>.</p>
 			</div>
